--- a/main.css
+++ b/main.css
@@ -41,19 +41,16 @@ header nav ul li {
     display: inline;
 }
 
-header img {
-    height: 26px;;
-}
-
 header a, .texto a {
     text-decoration: none;
+    color: black;
 }
 
 section .container h1 {
     font-family: 'Pangolin', cursive;
 }
 
-section .texto img {
+section .texto img, .inspiracao {
     height: 26px;
     margin-top: auto;
     margin-bottom: auto;
@@ -63,14 +60,40 @@ section .texto li {
     display: inline;
 }
 
-.texto p {
+.texto p, .inspiracao p {
     margin-bottom: 10px;
+}
+
+.foto-perfil {
+    margin: 24px;
 }
 
 .foto-perfil img {
     width: 200px;
-    margin-top: 40px;
-    margin-right: 60px;
+    border-radius: 10%;
+    align-items: center;
+    padding: auto;
+}
+
+.skills {
+    text-align: center;
+    padding: 8px;
+}
+
+.skills a {
+    text-decoration: none;
+    padding: 24px;
+}
+
+a:visited {
+    color: black;
+}
+
+.skills button {
+    margin-bottom: 8px;
+    padding: 8px;
+    align-items: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
 section .container {
@@ -79,21 +102,111 @@ section .container {
     text-align: justify;
 }
 
-section .badges img {
-    height: 64px;
-}
-
-.badges {
+.fotos {
+    background-color: #e5decf;
+    border-radius: 5%;
     text-align: center;
-    margin: auto;
+    padding: 24px 0;
 }
 
-.badges li {
+.fotos ul li{
     display: inline;
 }
 
-.badges img {
-    height: 26px;
-    padding: 4px;
-    margin-top: 10px;
+.fotos ul li img {
+    width: 350px;
+    height: 450px;
+    object-fit: cover;
+    border-radius: 10%;
+}
+
+#Significados h1 {
+    font-family: 'Pangolin', cursive;
+    margin-bottom: none;
+    margin-bottom: 24px;
+}
+
+#Significados .container {
+    display: block;
+}
+
+#inspiracao {
+    font-family: 'Pangolin', cursive;
+    margin-bottom: none;
+    margin-bottom: 24px;
+}
+
+#inspiracao #foto-einstein {
+    display: flex;
+}
+
+#inspiracao #foto-einstein img {
+    height: 320px;
+    margin: 24px;
+}
+
+#inspiracao div p {
+    font-size: 40px;
+    font-style: italic;
+    margin: 120px 10px;
+    background-color: #e5decf;
+    font-family: 'Roboto Mono', monospace;
+    padding: 8px 16px;
+}
+
+#inspiracao div h2 {
+    margin-bottom: 18px;
+}
+
+#contato {
+    font-family: 'Pangolin', cursive;
+    margin-bottom: none;
+    margin-bottom: 24px;
+}
+
+#contato .container {
+    display: block;
+}
+
+.form-contato {
+    display: flex;
+}
+
+form input, form textarea, form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+    align-items: center;
+    font-family: 'Roboto Mono', monospace;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+section h3 {
+    margin-bottom: 16px;
+}
+
+button {
+    background-color: #e5decf;
+    color: black;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #eee9df;
+}
+
+input:focus, textarea:focus {
+    outline-color: #182c61;
+}
+
+footer {
+    background-color: #e5decf;
+    padding: 16px 0;
 }
